templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
spec:
  selector:
    app: hello-world-app
  ports:
    - name: http-web
      protocol: TCP
      port: 9090
  type: ClusterIP
